# voicemode

./: COMPARISON.md  IMPLEMENTATION_SUMMARY.md  OPENCODE_INTEGRATION.md  OPENCODE_PATCH.md  QUICKSTART_OPENCODE.md  README.md  coverage.xml  mkdocs.yml  pyproject.toml
docs/guides/: configuration.md  custom-endpoints.md  opencode-setup.md
patch/: README.md  install-opencode-patch.sh  test-patch.sh
patch/commands/voice/: config.md  converse.md  help.md  install.md  status.md
patch/wrappers/: voice-converse.py  voice-status.py
tests/: test_custom_endpoint_discovery.py  test_provider_selection.py
voice_mode/: provider_discovery.py  providers.py
